<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dummy Button</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Contact Us</string>
    <string name="title_section3">More Apps</string>
    <string name="title_section4">Like Us on Facebook</string>
    <string name="title_section5">Follow Us on Twitter</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="rand">Random</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="funny_sounds">Funny Sounds</string>
    <string name="pickup_lines">Pickup Lines</string>

</resources>